# AlchemyOfTime

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: headerlist.cmake  sourcelist.cmake  version.rc.in
cmake/ports/clib-utils-qtr/: portfile.cmake  vcpkg.json
include/: BoundingBox.h  BoundingBox.hpp  CellScan.h  CustomObjects.h  Data.h  DrawDebug.h  DrawDebug.hpp  DynamicFormTracker.h  Events.h  Geometry.hpp  Hooks.h  Logger.h  Lorebox.h  MCP.h  Manager.h  PCH.h  Queue.h  Serialization.h  Settings.h  Threading.h  Ticker.h  Utils.h
src/: BoundingBox.cpp  CellScan.cpp  CustomObjects.cpp  Data.cpp  DrawDebug.cpp  Events.cpp  Hooks.cpp  Lorebox.cpp  MCP.cpp  Manager.cpp  Queue.cpp  Serialization.cpp  Settings.cpp  Ticker.cpp  Utils.cpp  plugin.cpp
